Bug 40854 - [4.5 Regression] Conflicting crc32 functions in libiberty and zlib
Summary: [4.5 Regression] Conflicting crc32 functions in libiberty and zlib
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-25 00:22 UTC by Andrew John Hughes
Modified: 2009-07-25 06:33 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-07-25 02:08:44


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew John Hughes 2009-07-25 00:22:12 UTC
The application of:

http://gcc.gnu.org/ml/gcc-patches/2009-07/msg01459.html

causes a build failure:

In file included from /home/andrew/projects/classpath/gcj/sources/gcc/gcc/java/jcf-io.c:39:0:
/home/andrew/projects/classpath/gcj/sources/gcc/gcc/../zlib/zlib.h:1285:23: error: conflicting types for ‘crc32’
/home/andrew/projects/classpath/gcj/sources/gcc/gcc/../include/libiberty.h:316:21: note: previous declaration of ‘crc32’ \
was here

Building using:

$GCC_HOME/configure --prefix=$GCC_INSTALL --disable-multilib \
--enable-languages=c,c++,java --enable-java-awt=gtk,xlib,qt \
--enable-gconf-peer --enable-gstreamer-peer --enable-gjdoc \
--enable-java-maintainer-mode --with-java-home=$GCC_INSTALL \
--enable-java-home --with-jvm-root-dir=$GCC_INSTALL/jdk \
--with-jvm-jar-dir=$GCC_INSTALL/jvm-exports &&
make -j9
Comment 1 John David Anglin 2009-07-25 02:08:44 UTC
Also seen on i686-apple-darwin9.
Comment 2 ian@gcc.gnu.org 2009-07-25 06:28:29 UTC
Subject: Bug 40854

Author: ian
Date: Sat Jul 25 06:28:16 2009
New Revision: 150075

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=150075
Log:
include/:
	PR bootstrap/40854
	* libiberty.h (xcrc32): Rename from crc32.
libiberty/:
	PR bootstrap/40854
	* crc32.c (xcrc32): Rename from crc32.

Modified:
    trunk/include/ChangeLog
    trunk/include/libiberty.h
    trunk/libiberty/ChangeLog
    trunk/libiberty/crc32.c

Comment 3 Ian Lance Taylor 2009-07-25 06:33:11 UTC
Fixed.  Sorry about that.