include/: 	PR bootstrap/40854 	* libiberty.h (xcrc32): Rename from crc32. libiberty/: 	PR bootstrap/40854 	* crc32.c (xcrc32): Rename from crc32.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@150075 138bc75d-0d04-0410-961f-82ee72b054a4