include/libiberty.h
@@ -313,7 +313,7 @@ extern double physmem_total (void);
 extern double physmem_available (void);
 
 /* Compute the 32-bit CRC of a block of memory.  */
-extern unsigned int crc32 (const unsigned char *, int, unsigned int);
+extern unsigned int xcrc32 (const unsigned char *, int, unsigned int);
 
 /* These macros provide a K&R/C89/C++-friendly way of allocating structures
    with nice encapsulation.  The XDELETE*() macros are technically
